--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,34 +10,35 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
+    "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-bootstrap-icons": "^1.11.6",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.25.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.48.2",
-    "@tanstack/react-query": "^5.8.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-image-gallery": "^1.3.0",
-    "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "framer-motion": "^10.16.16",
     "react-intersection-observer": "^9.5.3",
     "react-lazy-load-image-component": "^1.6.0",
-    "react-helmet-async": "^1.3.0",
-    "react-dropzone": "^14.2.3",
-    "react-datepicker": "^4.25.0",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.20.1",
     "react-select": "^5.8.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-table": "^7.8.0",
-    "react-chartjs-2": "^5.2.0",
-    "chart.js": "^4.4.0",
-    "jspdf": "^2.5.1",
-    "html2canvas": "^1.4.1",
-    "moment": "^2.29.4",
-    "lodash": "^4.17.21",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
