--- a/backend/env.example
+++ b/backend/env.example
@@ -3,23 +3,30 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB Configuration
-MONGODB_URI=mongodb+srv://codeaxisadmin:admin@cluster0.pps02lf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=
 
 # JWT Configuration
-JWT_SECRET=123kijan@321
-JWT_REFRESH_SECRET=123456@oiuyrvgdsa
+JWT_SECRET=
+JWT_REFRESH_SECRET=
 JWT_EXPIRE=24h
 JWT_REFRESH_EXPIRE=7d
 
-# Cloudinary Configuration
-CLOUDINARY_CLOUD_NAME=dqzhx9vja
-CLOUDINARY_API_KEY=971999883741249
-CLOUDINARY_API_SECRET=vIt-8rDvq2vAlxLSVGo2s3POSU4
+# Cloudinary Configuration (either CLOUDINARY_URL or individual parts)
+CLOUDINARY_URL=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 
 # Email Configuration (Gmail SMTP)
-EMAIL_USER=cmsclientside@gmail.com
-EMAIL_PASS=1234@CMS
-EMAIL_FROM=CodeAxis <cmsclientside@gmail.com>
+EMAIL_USER=
+EMAIL_PASS=
+EMAIL_FROM=
+
+# App URL for password reset links
+APP_URL=http://localhost:5173
+
+# CORS Origins (comma-separated)
+ORIGIN=http://localhost:5173,http://localhost:3000
 
 # File Upload Configuration
 MAX_FILE_SIZE=10485760
